--- a/mia/Base.lproj/HomePage.storyboard
+++ b/mia/Base.lproj/HomePage.storyboard
@@ -282,7 +282,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjQ-6i-CWc">
-                                <rect key="frame" x="20" y="531" width="41" height="32"/>
+                                <rect key="frame" x="15" y="531" width="41" height="32"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="反  馈">
@@ -293,7 +293,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推人数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3v-nK-bAd">
-                                <rect key="frame" x="236" y="537" width="64" height="20"/>
+                                <rect key="frame" x="241" y="537" width="64" height="20"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -314,9 +314,9 @@
                             <constraint firstItem="97C-zd-yXF" firstAttribute="top" secondItem="KeA-T2-Abd" secondAttribute="bottom" constant="15" id="GCF-La-sRx"/>
                             <constraint firstItem="rGi-8V-WGj" firstAttribute="centerX" secondItem="lBD-s7-8t9" secondAttribute="centerX" id="GLv-ad-a0L"/>
                             <constraint firstAttribute="bottom" secondItem="K76-u6-UI7" secondAttribute="bottom" constant="20" id="Gji-wQ-Z6e"/>
-                            <constraint firstItem="zjQ-6i-CWc" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" constant="20" id="HC8-bO-hl5"/>
+                            <constraint firstItem="zjQ-6i-CWc" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" constant="15" id="HC8-bO-hl5"/>
                             <constraint firstItem="i7R-7R-kAw" firstAttribute="centerX" secondItem="K76-u6-UI7" secondAttribute="centerX" id="ITI-a2-PHK"/>
-                            <constraint firstAttribute="trailing" secondItem="X3v-nK-bAd" secondAttribute="trailing" constant="20" id="Iyw-UR-Ig3"/>
+                            <constraint firstAttribute="trailing" secondItem="X3v-nK-bAd" secondAttribute="trailing" constant="15" id="Iyw-UR-Ig3"/>
                             <constraint firstItem="8aQ-Ov-Qm8" firstAttribute="top" secondItem="rGi-8V-WGj" secondAttribute="bottom" constant="10" id="Jrb-Fc-8gt"/>
                             <constraint firstItem="W4h-Kd-Mqg" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" id="Oh3-3m-go7"/>
                             <constraint firstItem="6LO-Lb-msR" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" id="Rcp-NR-a1u"/>
@@ -344,8 +344,8 @@
                         <outlet property="fishBottomConstraint" destination="Gji-wQ-Z6e" id="08a-67-gj3"/>
                         <outlet property="fishView" destination="K76-u6-UI7" id="lyD-gc-dvz"/>
                         <outlet property="headerViewBottomConstraint" destination="suh-eh-pfG" id="3cj-Uq-eNc"/>
-                        <outlet property="infectCountLeftPromptLabel" destination="X3v-nK-bAd" id="y5m-Qx-HdH"/>
                         <outlet property="infectCountPromptLabel" destination="KWo-qg-cwb" id="eNd-HB-RWV"/>
+                        <outlet property="infectCountRightPromptLabel" destination="X3v-nK-bAd" id="nX0-yd-Us1"/>
                         <outlet property="infectUserView" destination="1bC-Qy-IVf" id="OyI-2j-FoL"/>
                         <outlet property="panGesture" destination="uZS-pI-r12" id="WF9-Of-6pe"/>
                         <outlet property="profileButton" destination="97C-zd-yXF" id="tZ1-SO-1QU"/>
