--- a/mia/Base.lproj/HomePage.storyboard
+++ b/mia/Base.lproj/HomePage.storyboard
@@ -27,6 +27,12 @@
                                     <constraint firstAttribute="width" constant="35" id="rt3-Fw-Bi9"/>
                                 </constraints>
                             </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="暂没有更多了-_-# " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TpZ-az-kAS">
+                                <rect key="frame" x="40" y="184" width="116" height="17"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-h5-qi0" customClass="iCarousel">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="384"/>
                                 <animations/>
@@ -45,6 +51,8 @@
                         <constraints>
                             <constraint firstItem="W8o-h5-qi0" firstAttribute="top" secondItem="mYa-hk-Nog" secondAttribute="top" id="3yn-6y-zj6"/>
                             <constraint firstItem="DZz-PE-QxU" firstAttribute="trailing" secondItem="W8o-h5-qi0" secondAttribute="leading" id="6lx-ci-tDf"/>
+                            <constraint firstItem="TpZ-az-kAS" firstAttribute="leading" secondItem="DZz-PE-QxU" secondAttribute="trailing" constant="40" id="A1B-kU-H1x"/>
+                            <constraint firstItem="TpZ-az-kAS" firstAttribute="centerY" secondItem="DZz-PE-QxU" secondAttribute="centerY" id="Dnp-cv-VbW"/>
                             <constraint firstItem="DZz-PE-QxU" firstAttribute="centerY" secondItem="W8o-h5-qi0" secondAttribute="centerY" id="K7W-lt-mOs"/>
                             <constraint firstItem="W8o-h5-qi0" firstAttribute="leading" secondItem="mYa-hk-Nog" secondAttribute="leading" id="Os9-um-XnM"/>
                             <constraint firstAttribute="trailing" secondItem="W8o-h5-qi0" secondAttribute="trailing" id="TMe-gv-kvC"/>
@@ -60,6 +68,7 @@
                         <outlet property="noMoreLogoWidthConstraint" destination="rt3-Fw-Bi9" id="9Iy-mh-F0c"/>
                         <outlet property="noMoreNewestLogo" destination="fR7-r2-rfU" id="JTm-4g-ZKA"/>
                         <outlet property="noMoreNewestLogoLeftConstraint" destination="v5N-d9-zhH" id="gZm-B3-qG8"/>
+                        <outlet property="waringLabel" destination="TpZ-az-kAS" id="UdZ-ly-WSg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zeR-tz-v1f" userLabel="First Responder" sceneMemberID="firstResponder"/>
