--- a/mia/Base.lproj/MusicDetail.storyboard
+++ b/mia/Base.lproj/MusicDetail.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="2320" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -312,6 +312,7 @@
                                                 <constraint firstItem="mcK-U8-1Fd" firstAttribute="width" secondItem="mcK-U8-1Fd" secondAttribute="height" multiplier="1:1" id="TJ5-AF-vP3"/>
                                                 <constraint firstItem="hRv-bG-Oto" firstAttribute="leading" secondItem="mcK-U8-1Fd" secondAttribute="trailing" constant="8" id="V6r-QD-CRd"/>
                                                 <constraint firstItem="jH4-UI-10J" firstAttribute="leading" secondItem="mcK-U8-1Fd" secondAttribute="leading" id="ZWx-CB-UxL"/>
+                                                <constraint firstItem="IcM-EQ-1sd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hRv-bG-Oto" secondAttribute="trailing" constant="12" id="acw-j9-AtD"/>
                                                 <constraint firstItem="IcM-EQ-1sd" firstAttribute="top" secondItem="ldy-5C-Z9I" secondAttribute="top" id="cC5-Re-Qlt"/>
                                                 <constraint firstAttribute="trailing" secondItem="YXr-1n-0ea" secondAttribute="trailing" constant="15" id="cea-0E-Rea"/>
                                                 <constraint firstItem="mcK-U8-1Fd" firstAttribute="leading" secondItem="ldy-5C-Z9I" secondAttribute="leading" constant="15" id="fjR-TX-aOC"/>
@@ -395,7 +396,7 @@
                                                     <rect key="frame" x="62" y="0.0" width="250" height="17"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="评论内容" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="yVH-v7-RDw">
