--- a/mia/Base.lproj/HomePage.storyboard
+++ b/mia/Base.lproj/HomePage.storyboard
@@ -3,9 +3,7 @@
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Radio View Controller-->
@@ -17,11 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wcV-VL-v9l"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="mYa-hk-Nog">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="384"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-NoMoreLastest" translatesAutoresizingMaskIntoConstraints="NO" id="DZz-PE-QxU">
-                                <rect key="frame" x="-35" y="97" width="35" height="70"/>
+                                <rect key="frame" x="-35" y="157" width="35" height="70"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="I0a-H5-MNS"/>
@@ -29,18 +27,18 @@
                                 </constraints>
                             </imageView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="暂没有更多了-_-# " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TpZ-az-kAS">
-                                <rect key="frame" x="40" y="124" width="116" height="17"/>
+                                <rect key="frame" x="40" y="184" width="116" height="17"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-h5-qi0" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="264"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="384"/>
                                 <animations/>
                                 <gestureRecognizers/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-NoMoreNewest" translatesAutoresizingMaskIntoConstraints="NO" id="fR7-r2-rfU">
-                                <rect key="frame" x="320" y="97" width="35" height="70"/>
+                                <rect key="frame" x="320" y="157" width="35" height="70"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="35" id="KBC-98-S49"/>
@@ -106,88 +104,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6LO-Lb-msR">
-                                <rect key="frame" x="0.0" y="124" width="320" height="384"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <animations/>
                                 <connections>
                                     <segue destination="ln9-6M-WL7" kind="embed" identifier="HomePageContainerIdentifier" id="pnm-F6-F8h"/>
                                 </connections>
                             </containerView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fLC-L9-4kO">
-                                <rect key="frame" x="0.0" y="64" width="320" height="60"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生如夏花" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYL-XZ-eoB">
-                                        <rect key="frame" x="128" y="16" width="64" height="20"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朴树" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s7m-1B-kTf">
-                                        <rect key="frame" x="128" y="36" width="64" height="17"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="8nY-55-nKZ"/>
-                                    <constraint firstItem="s7m-1B-kTf" firstAttribute="centerX" secondItem="wYL-XZ-eoB" secondAttribute="centerX" id="CN6-cr-1yG"/>
-                                    <constraint firstItem="s7m-1B-kTf" firstAttribute="top" secondItem="wYL-XZ-eoB" secondAttribute="baseline" constant="5" id="L6C-Nm-NZA"/>
-                                    <constraint firstItem="wYL-XZ-eoB" firstAttribute="centerX" secondItem="fLC-L9-4kO" secondAttribute="centerX" id="RjZ-Jr-qZX"/>
-                                    <constraint firstItem="s7m-1B-kTf" firstAttribute="width" secondItem="wYL-XZ-eoB" secondAttribute="width" id="fQ6-vL-f0e"/>
-                                    <constraint firstItem="wYL-XZ-eoB" firstAttribute="bottom" secondItem="fLC-L9-4kO" secondAttribute="centerY" multiplier="1.2" id="gcR-UY-jfb"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AfJ-JT-HN6">
-                                <rect key="frame" x="0.0" y="508" width="320" height="60"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjQ-6i-CWc">
-                                        <rect key="frame" x="12" y="14" width="41" height="32"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="反  馈">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="feedBackButtonPressed" destination="Vwv-7l-Pgq" eventType="touchUpInside" id="crO-Is-wMz"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aDD-51-MrB">
-                                        <rect key="frame" x="267" y="14" width="41" height="32"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="更  多"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rxF-Re-FEQ">
-                                        <rect key="frame" x="112" y="14" width="32" height="32"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="评论"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NPC-AP-28U">
-                                        <rect key="frame" x="176" y="14" width="32" height="32"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="搜藏"/>
-                                    </button>
-                                </subviews>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="aDD-51-MrB" secondAttribute="trailing" constant="12" id="4y5-09-zNn"/>
-                                    <constraint firstItem="aDD-51-MrB" firstAttribute="centerY" secondItem="AfJ-JT-HN6" secondAttribute="centerY" id="BmY-de-4xR"/>
-                                    <constraint firstItem="rxF-Re-FEQ" firstAttribute="trailing" secondItem="AfJ-JT-HN6" secondAttribute="centerX" multiplier="0.9" id="LWO-SV-6Su"/>
-                                    <constraint firstItem="NPC-AP-28U" firstAttribute="leading" secondItem="AfJ-JT-HN6" secondAttribute="centerX" multiplier="1.1" id="WfL-T7-hXK"/>
-                                    <constraint firstAttribute="height" constant="60" id="YEX-dH-wPw"/>
-                                    <constraint firstItem="rxF-Re-FEQ" firstAttribute="centerY" secondItem="AfJ-JT-HN6" secondAttribute="centerY" id="gmY-Ts-QWa"/>
-                                    <constraint firstItem="zjQ-6i-CWc" firstAttribute="centerY" secondItem="AfJ-JT-HN6" secondAttribute="centerY" id="kyR-Qb-dL3"/>
-                                    <constraint firstItem="NPC-AP-28U" firstAttribute="centerY" secondItem="AfJ-JT-HN6" secondAttribute="centerY" id="v9m-0a-495"/>
-                                    <constraint firstItem="zjQ-6i-CWc" firstAttribute="leading" secondItem="AfJ-JT-HN6" secondAttribute="leading" constant="12" id="vhH-hR-BE2"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97C-zd-yXF">
                                 <rect key="frame" x="15" y="79" width="32" height="32"/>
                                 <animations/>
@@ -213,25 +135,32 @@
                                     <action selector="shareButtonPressed" destination="Vwv-7l-Pgq" eventType="touchUpInside" id="uQ2-48-6NT"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjQ-6i-CWc">
+                                <rect key="frame" x="15" y="531" width="41" height="32"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="反  馈">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="feedBackButtonPressed" destination="Vwv-7l-Pgq" eventType="touchUpInside" id="crO-Is-wMz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="AfJ-JT-HN6" secondAttribute="trailing" id="7Ve-M9-20W"/>
                             <constraint firstAttribute="trailing" secondItem="QnW-Sx-Tnv" secondAttribute="trailing" constant="15" id="7h9-ei-d5Z"/>
-                            <constraint firstItem="fLC-L9-4kO" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" id="C3J-Fs-Jo9"/>
                             <constraint firstItem="QnW-Sx-Tnv" firstAttribute="top" secondItem="KeA-T2-Abd" secondAttribute="bottom" constant="15" id="Fqx-BI-cio"/>
-                            <constraint firstItem="8aQ-Ov-Qm8" firstAttribute="top" secondItem="AfJ-JT-HN6" secondAttribute="bottom" id="G3b-rI-X2T"/>
                             <constraint firstItem="97C-zd-yXF" firstAttribute="top" secondItem="KeA-T2-Abd" secondAttribute="bottom" constant="15" id="GCF-La-sRx"/>
-                            <constraint firstAttribute="trailing" secondItem="fLC-L9-4kO" secondAttribute="trailing" id="Hp3-cK-yZS"/>
-                            <constraint firstItem="AfJ-JT-HN6" firstAttribute="top" secondItem="6LO-Lb-msR" secondAttribute="bottom" id="MOc-cd-qyD"/>
-                            <constraint firstItem="AfJ-JT-HN6" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" id="RUt-LO-6Q3"/>
+                            <constraint firstItem="zjQ-6i-CWc" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" constant="15" id="HC8-bO-hl5"/>
                             <constraint firstItem="6LO-Lb-msR" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" id="Rcp-NR-a1u"/>
-                            <constraint firstItem="fLC-L9-4kO" firstAttribute="top" secondItem="KeA-T2-Abd" secondAttribute="bottom" id="aZj-Ob-Lrw"/>
+                            <constraint firstItem="8aQ-Ov-Qm8" firstAttribute="top" secondItem="zjQ-6i-CWc" secondAttribute="bottom" constant="5" id="a72-9L-Gfz"/>
+                            <constraint firstAttribute="bottom" secondItem="6LO-Lb-msR" secondAttribute="bottom" id="clv-Jc-zsc"/>
                             <constraint firstItem="97C-zd-yXF" firstAttribute="leading" secondItem="lBD-s7-8t9" secondAttribute="leading" constant="15" id="eMs-u1-fsy"/>
-                            <constraint firstItem="6LO-Lb-msR" firstAttribute="top" secondItem="fLC-L9-4kO" secondAttribute="bottom" id="lpZ-Ui-mMy"/>
                             <constraint firstAttribute="trailing" secondItem="6LO-Lb-msR" secondAttribute="trailing" id="pvq-K7-uG1"/>
+                            <constraint firstItem="6LO-Lb-msR" firstAttribute="top" secondItem="KeA-T2-Abd" secondAttribute="bottom" id="uP2-Ce-bLl"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kAH-Nc-SYo"/>
