--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -14,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Adt-yX-Kcn">
-                    <rect key="frame" x="53" y="10" width="214" height="214"/>
+                    <rect key="frame" x="53" y="80" width="214" height="214"/>
                     <animations/>
                     <color key="backgroundColor" red="0.94509803921568625" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                     <gestureRecognizers/>
@@ -26,14 +27,14 @@
                     </connections>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-CoverMask" translatesAutoresizingMaskIntoConstraints="NO" id="D9t-6x-o7k">
-                    <rect key="frame" x="53" y="159" width="214" height="65"/>
+                    <rect key="frame" x="53" y="229" width="214" height="65"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="65" id="qLo-i7-3fg"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EuO-ig-wsS">
-                    <rect key="frame" x="133" y="90" width="55" height="55"/>
+                    <rect key="frame" x="133" y="160" width="55" height="55"/>
                     <animations/>
                     <state key="normal" image="HP-PauseIcon"/>
                     <state key="selected" image="HP-PlayIcon"/>
@@ -42,7 +43,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
-                    <rect key="frame" x="140" y="244" width="40" height="40"/>
+                    <rect key="frame" x="140" y="314" width="40" height="40"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="wzP-as-myT" secondAttribute="height" multiplier="1:1" id="Inj-Jl-gVj"/>
@@ -54,7 +55,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" contentMode="left" text="评论内容+♫地理位置信息" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
-                    <rect key="frame" x="53" y="352" width="214" height="20"/>
+                    <rect key="frame" x="53" y="422" width="214" height="20"/>
                     <animations/>
                     <gestureRecognizers/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -69,8 +70,22 @@
                         <outletCollection property="gestureRecognizers" destination="W0X-B7-fvY" appends="YES" id="J3t-Ff-4eA"/>
                     </connections>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生如夏花" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZT2-TF-oW0">
+                    <rect key="frame" x="53" y="14" width="214" height="20"/>
+                    <animations/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朴树" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRy-kE-hZ9">
+                    <rect key="frame" x="53" y="34" width="214" height="17"/>
+                    <animations/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-px-WgB">
-                    <rect key="frame" x="120" y="318" width="80" height="20"/>
+                    <rect key="frame" x="120" y="388" width="80" height="20"/>
                     <animations/>
                     <gestureRecognizers/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
@@ -81,7 +96,7 @@
                     </connections>
                 </label>
                 <progressView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WMI-Wc-Fx1">
-                    <rect key="frame" x="53" y="229" width="214" height="5"/>
+                    <rect key="frame" x="53" y="289" width="214" height="5"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="4" id="PUk-Ch-fA0"/>
@@ -95,20 +110,27 @@
             <constraints>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="0hi-7O-Uqb"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="0xj-fK-f7w"/>
+                <constraint firstItem="XRy-kE-hZ9" firstAttribute="top" secondItem="ZT2-TF-oW0" secondAttribute="baseline" constant="5" id="4C9-vI-fnM"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="gBx-px-WgB" secondAttribute="bottom" constant="14" id="4hM-fA-H9p"/>
                 <constraint firstItem="gBx-px-WgB" firstAttribute="centerX" secondItem="wzP-as-myT" secondAttribute="centerX" id="5ha-OU-Fgw"/>
+                <constraint firstItem="XRy-kE-hZ9" firstAttribute="width" secondItem="ZT2-TF-oW0" secondAttribute="width" id="6xj-oq-1pf"/>
+                <constraint firstItem="ZT2-TF-oW0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="13.5" id="7yx-jX-4FX"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="9RI-Mq-GaU"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="CgW-uw-Z7W"/>
+                <constraint firstItem="ZT2-TF-oW0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="H2e-p2-lq5"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="Klb-b5-TXW"/>
+                <constraint firstItem="ZT2-TF-oW0" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="LvY-9F-2BE"/>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="-1" id="OCh-Kq-f2e"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="Ogg-gF-1RN"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="PEr-Bm-9E7"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="R15-Zk-3Zd"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="2:3" id="SyY-xB-YQz"/>
+                <constraint firstItem="XRy-kE-hZ9" firstAttribute="centerX" secondItem="ZT2-TF-oW0" secondAttribute="centerX" id="ZDg-s5-PqR"/>
                 <constraint firstItem="gBx-px-WgB" firstAttribute="top" secondItem="wzP-as-myT" secondAttribute="bottom" constant="34" id="aJZ-qb-c3q"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="20" id="gDx-VG-7kD"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerY" secondItem="Adt-yX-Kcn" secondAttribute="centerY" id="hIe-Py-Nqj"/>
-                <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="lGy-uv-HfU"/>
+                <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="80" id="lGy-uv-HfU"/>
+                <constraint firstItem="ZT2-TF-oW0" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="sdq-eu-6Gp"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="spj-XR-aiC"/>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="w2n-fo-0qt"/>
             </constraints>
@@ -121,6 +143,9 @@
                 <outlet property="sharerNickNameLabel" destination="gBx-px-WgB" id="Tej-py-xns"/>
                 <outlet property="sharerNickNameToShrareContentVerticallySpaceConstraint" destination="4hM-fA-H9p" id="fh4-v9-vdh"/>
                 <outlet property="shrareContentLabel" destination="fmy-Es-e4Z" id="4yO-YB-NY4"/>
+                <outlet property="songNameLabel" destination="ZT2-TF-oW0" id="sQw-zK-RJv"/>
+                <outlet property="songNameToSongerNameVerticallySpaceConstraint" destination="4C9-vI-fnM" id="tcg-WU-hEz"/>
+                <outlet property="songerNameLabel" destination="XRy-kE-hZ9" id="Efp-qQ-71O"/>
                 <outlet property="starButton" destination="wzP-as-myT" id="fQu-cx-fy8"/>
                 <outlet property="starToSharerNickNameVerticallySpaceConstraint" destination="aJZ-qb-c3q" id="QJj-xs-llG"/>
             </connections>
